--- a/Investments 8th ed Bodie_Notes.ipynb
+++ b/Investments 8th ed Bodie_Notes.ipynb
@@ -70,7 +70,9 @@
     "> _\"There ain't no such thing as a free lunch\"_\n",
     "\n",
     "**Risk-Return Tradeoff**\n",
-    "* the higher the risk, the "
+    "* the higher the risk, the higher the return; the lower the risk, the lower the return\n",
+    "\n",
+    "![rrtradeoff.jpg](https://www.investopedia.com/thmb/WbOScPBP2E73yJmQ2SLTMZ1LMis=/790x444/smart/filters:no_upscale()/RiskReturnTradeoff-c42cd8df81b7496f973da93c57ee96e2.jpg)"
    ]
   },
   {
